--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-test-typescript",
+  "homepage": "https://AtukaJikuridze.github.io/ReactBlog",
+  "name": "reactblog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,16 +13,21 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^5.0.0",
     "history": "^5.3.0",
+    "picomatch": "^2.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.58.0"
   }
 }
